# SImP

./: .gitignore  CMakeLists.txt  README.md  package-lock.json
resources/images/: imgui.ini
shader/: simple.frag  simple.vert
shader/linear/: MeanFilter.comp
shader/nonlinear/: MaxFilter.comp  MinFilter.comp
src/: main.cpp
src/core/: Program.cpp  Program.h
src/core/io/: FileHandler.cpp  FileHandler.h  ImageHandler.cpp  ImageHandler.h  Interactable.cpp  Interactable.h  SystemFiles.cpp  SystemFiles.h
src/core/rendering/: ColorStyles.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  WindowManager.cpp  WindowManager.h
src/core/scene/: FilterManager.cpp  FilterManager.h  Image.cpp  Image.h  ImageFilter.h  ImageFilterGpu.h  Layer.cpp  Layer.h  LayerManager.cpp  LayerManager.h
src/core/util/: Singleton.h  Types.h
src/core/widget/: DialogWidget.cpp  DialogWidget.h  FilterSettingsWidget.cpp  FilterSettingsWidget.h  ImageSelectionWidget.cpp  ImageSelectionWidget.h  LayerWidget.cpp  LayerWidget.h  MessageWidget.cpp  MessageWidget.h  SpinnerWidget.cpp  SpinnerWidget.h  Widget.h  WidgetManager.cpp  WidgetManager.h
src/filters/: ImageFilter.h  ImageFilterGpu.h
src/filters/coloradjustment/: ConvertToGrayscale.cpp  ConvertToGrayscale.h  LinearSpread.cpp  LinearSpread.h  Saturate.cpp  Saturate.h  SimplifyColors.cpp  SimplifyColors.h
src/filters/distortion/: Noise.cpp  Noise.h  Whirl.cpp  Whirl.h
src/filters/edgedetection/: LaplaceFilter.cpp  LaplaceFilter.h
src/filters/fft/: FastFourierTransform.cpp  FastFourierTransform.h
src/filters/linear/: MeanFilterGpu.h
src/filters/nonlinear/: KuwaharaFilter.cpp  KuwaharaFilter.h  MaxFilter.h  MaxFilterGpu.h  MedianFilter.cpp  MedianFilter.h  MedianFilterGpu.h  MinFilter.h  MinFilterGpu.h  SNN.cpp  SNN.h
src/filters/restructure/: MergeChannels.cpp  MergeChannels.h  MixImages.cpp  MixImages.h  SplitChannels.cpp  SplitChannels.h
src/filters/test/: Multithreading.cpp  Multithreading.h
src/io/: FileHandler.cpp  FileHandler.h  ImageHandler.cpp  ImageHandler.h  Interactable.cpp  Interactable.h  UserData.h
src/processing/: FilterManager.cpp  FilterManager.h  ImageFilter.h  ImageFilterGpu.h
src/processing/coloradjustment/: ConvertToGrayscale.cpp  ConvertToGrayscale.h  LinearSpread.cpp  LinearSpread.h  Saturate.cpp  Saturate.h  SimplifyColors.cpp  SimplifyColors.h
src/processing/distortion/: Noise.cpp  Noise.h
src/processing/edgedetection/: LaplaceFilter.cpp  LaplaceFilter.h
src/processing/fft/: FastFourierTransform.cpp  FastFourierTransform.h
src/processing/linear/: MeanFilter.cpp  MeanFilter.h  MeanFilterGpu.h
src/processing/nonlinear/: MaxFilter.cpp  MaxFilter.h  MaxFilterGpu.h  MedianFilter.cpp  MedianFilter.h  MedianFilterGpu.h  MinFilter.cpp  MinFilter.h  MinFilterGpu.h
src/processing/restructure/: MixImages.cpp  MixImages.h  SplitChannels.cpp  SplitChannels.h
src/processing/test/: TestFilter.cpp  TestFilter.h
src/rendering/: ColorStyles.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  WindowManager.cpp  WindowManager.h
src/scene/: Canvas.cpp  Canvas.h  Image.cpp  Image.h  Layer.cpp  Layer.h  LayerManager.cpp  LayerManager.h  MenuManager.cpp  MenuManager.h  SystemFiles.h
src/scene/menu/: MenuManager.cpp  MenuManager.h  SpinnerWidget.cpp  SpinnerWidget.h
src/scene/widget/: DialogWidget.cpp  DialogWidget.h  FilterSettingsWidget.cpp  FilterSettingsWidget.h  LayerWidget.cpp  LayerWidget.h  MessageWidget.cpp  MessageWidget.h  SpinnerWidget.cpp  SpinnerWidget.h  WidgetManager.h
src/util/: Timer.h  Types.h
